GitHub28062023/force-app/main/default/objects/Account/fields/OK_for_Q_Newsletters__c.field-meta.xml
<CustomField>
    <fullName>OK_for_Q_Newsletters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OK for Q Newsletters</label>
    <type>Checkbox</type>
</CustomField>