GitHub28062023/force-app/main/default/objects/Account/fields/Staircasing_Completion_Fee__c.field-meta.xml
<CustomField>
    <fullName>Staircasing_Completion_Fee__c</fullName>
    <label>Staircasing Completion Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>