GitHub28062023/force-app/main/default/objects/Account/fields/Total_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_Contacts__c</fullName>
    <label>Total Contacts</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>