GitHub28062023/force-app/main/default/objects/Account/recordTypes/Corporate_Member.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Member</fullName>
    <active>true</active>
    <label>Corporate Member</label>
</RecordType>