GitHub28062023/force-app/main/default/objects/Account/recordTypes/Q_Newsletter_Subscriber.recordType-meta.xml
<RecordType>
    <fullName>Q_Newsletter_Subscriber</fullName>
    <active>true</active>
    <description>Newsletter Subscriber</description>
    <label>Q Newsletter Subscriber</label>
</RecordType>